Changes to fix the layout issues of the icons

--- a/src/main/css/main.css
+++ b/src/main/css/main.css
@@ -39,8 +39,9 @@
 
 .submitContainers {
     display: inline-block;
-    margin: 5px;
+    margin: 5px 5px 5px 15px;
     text-align: right;
+    padding-right: 20px;
     width: 100%;
 }
 
